src/objects/SPE_PiValueTemp__c.object
<CustomObject>
    <fields>
        <fullName>BooleanValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Category Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateFormat__c</fullName>
        <label>Date Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateValue__c</fullName>
        <label>DateValue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnterpriseID__c</fullName>
        <encrypted>true</encrypted>
        <label>Enterprise ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorReason__c</fullName>
        <label>Error Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Filter10__c</fullName>
        <label>Filter10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter1__c</fullName>
        <label>Filter1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter2__c</fullName>
        <label>Filter2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketUnit__c</fullName>
        <label>Market Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberValue__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PIDefination__c</fullName>
        <label>PI Defination</label>
        <referenceTo>SPE_PIDefinition__c</referenceTo>
        <relationshipLabel>SPE_PiValueTemps</relationshipLabel>
        <relationshipName>SPE_PiValueTemps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Period1__c</fullName>
        <label>Period1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StringValue__c</fullName>
        <label>String Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueIdentifier__c</fullName>
        <label>Unique Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidateCategory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidateCategory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verified_BU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified BU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verified_Geo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified Geo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VerrifiedEnterpriseID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VerrifiedEnterpriseID</label>
        <type>Checkbox</type>
    </fields>
    <label>SPE_PiValueTemp</label>
    <nameField>
        <displayFormat>PV-{0000}</displayFormat>
        <label>SPE_PiValueTemp Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPE_PiValueTemps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>